Added footer and styled, changed pizza picture

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,10 +34,14 @@
 
           </ul>
         </div>
-        <img class='pizza-image' src="https://lh3.googleusercontent.com/proxy/SEZ1okrMhzMOBUd9n-eTdKTEPSRROQeLRkSj0tQtoaCIzDZOU8DN_no0KS4gBZwe_rW7TvGC4ebR9ORkHn7r8lBXBtPPsmbo2YnKnVSLRvXZpNumW3KDyo-GOrF5QYI" alt='pizza' />
+        <img class='pizza-image' src="https://food-images.files.bbci.co.uk/food/recipes/alpine_pizza_32132_16x9.jpg" alt='pizza' />
       </div>
     </div>
 
   </body>
+
+  <footer id="main-footer">
+    <p>Copyright &copy; 2020 Michael's Pizza Shop</p>
+</footer>
 
 </html>
